tests/error/unresolved_struct_inclusion.c
// fail "'unresolved': [0] Undeclared identifier."

struct { unresolved; }
